# Agentic-Studio-Voice

./: DEPENDENCY-STATUS.md  PROJECT-STATUS.md  docker-compose.yml  plan.md  spec.md  tasks.md  test_project_structure.py  voice-agent-platform-final-architecture.md  voice-agent-platform-prerequisites.md  voice-agent-platform-updated-architecture.md  voice-agent-platform-verified-requirements.md
backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile.dev  MOCK_REGISTRY.md  PHONE_INTEGRATION_SECURITY_AUDIT.md  PROJECT-STATUS.md  SECURITY_AUDIT_REPORT.md  alembic.ini  demo_websocket.py  firebase-service-account-test.json  load_env_test.py  main.py  phone_api_test_report.py  pyproject.toml  requirements-minimal.txt  requirements.txt  test_agent_creation_progress.py  test_agent_pipeline_temp.py  test_comprehensive_firestore_crud.py  test_fastapi_websocket.py  test_firebase_credentials.py  test_firebase_final_validation.py  test_firestore_knowledge.py  test_knowledge_api_endpoints.py  test_knowledge_api_firestore.py  test_knowledge_service_live.py  test_new_phone_methods.py  test_phone_api_endpoints.py  test_phone_api_endpoints_comprehensive.py  test_phone_api_final.py  test_phone_api_simple.py  test_phone_api_working.py  test_pipeline_resilience.py  test_pipeline_status.py  test_secure_services.py  test_service_status.py  test_websocket_integration.py  vercel.json  (+1 more)
backend/src/: agent_config_model.py  call_record_model.py  knowledge_model.py  models_init_fix.py  tenant_model.py
backend/src/api/: app.py  websocket_routes.py
backend/src/auth/: jwt_handler.py  middleware.py  models.py
backend/src/database/: __init__.py  connection.py  rls_policies.py  transaction.py
backend/src/models/: __init__.py  agent.py  knowledge.py  phone_number.py  tenant.py  voice_agent.py
backend/src/repositories/: tenant_repository.py
backend/src/schemas/: knowledge_categories.py  knowledge_schemas.py  phone_schemas.py  voice_agent_schemas.py
backend/src/services/: __init__.py  content_extraction_service.py  firebase_config.py  firebase_config_mock.py  firebase_config_secure.py  knowledge_base_service.py  tenant_service.py  voice_agent_service.py  web_crawler_service.py
backend/src/websocket/: __init__.py  progress_manager.py  progress_tracker.py  websocket_manager.py
backend/tests/unit/: test_agent_config_api.py  test_api_structure.py  test_auth_middleware.py  test_authentication_ui.py  test_cicd_pipeline.py  test_database_connection.py  test_database_models.py  test_docker_environment.py  test_frontend_setup.py  test_knowledge_categories_schema.py  test_monitoring.py  test_phone_integration.py  test_phone_integration.py.backup  test_service_integration.py  test_tenant_management.py  test_twilio_integration.py  test_twilio_integration_fixed.py  test_voice_agent_model_api.py  test_voice_integration.py  test_web_crawler_service.py  (+2 more)
(+111 files in other folders)
